components/AppHeader/index.module.scss
@import "@/assets/styles/breakpoints.scss";
@import "@/assets/styles/mixins.scss";

$header-height: 88px;

.appHeader {
    z-index: 99;
    width: 100%;
    /* width: 100vw; */
    height: $header-height;
    background-color: var(--header-bg, #eef2fc);
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 0 7rem;
    position: fixed;
    top: 0;

    &:global(.page-type-wide) {
        padding: 0 4rem;
    }

    @include max-width(xl) {
        flex-direction: column-reverse;
        padding-top: 4rem;
        gap: 2rem;
        padding: 0rem 4rem;
    }

    @include max-width(md) {
        padding: 0 16px;
    }

    @include mobile {
        * {
            -webkit-tap-highlight-color: transparent;
        }
    }
}

.headerWrapper {
    width: 100%;
    display: flex;
    max-width: 1280px;

    @include max-width(xl) {
        max-width: 1024px;
    }

    @include mobile {
        justify-content: space-between;
    }

    &:global(.page-type-wide) {
        max-width: 100vw;
    }
}

.logoContainer {
    display: flex;
    align-items: center;
    justify-content: flex-start;
    height: 100%;
    padding: 0 0px;
    margin-right: 1.5rem;
    width: 10rem;
}

.headerLinks {
    display: flex;
    align-items: center;
    justify-content: center;
    flex: 1;
    gap: 2rem;

    @include max-width(xl) {
        gap: 16p;
    }

    @include mobile {
        display: none;
    }

    &.mobileHeaderOpen {
        @include mobile {
            display: flex;
            flex-direction: column;
            position: absolute;
            z-index: 10;
            align-items: flex-start;
            left: 0;
            padding: 1rem 1.5rem;
            background-color: #e7ecf3;
            width: 100%;
            max-height: calc(100vh - $header-height);
            top: $header-height;
            overflow: auto;
            justify-content: flex-start;
        }
    }
}

.headerLink {
    padding: 0;

    &,
    & a {
        color: var(--header-menu-link-color, #4e618d);
        font-size: 1rem;
        font-weight: 500;
        letter-spacing: 0.32px;
        text-decoration: none;
        cursor: pointer;
    }

    -webkit-tap-highlight-color: transparent;
}

.headerButtons {
    display: flex;
    align-items: center;
    justify-content: flex-end;
    margin-left: 1rem;
    width: 10rem;
}

.burgerButton {
    svg {
        width: 24px;
        height: 24px;
    }
}

